# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = clustaar.webhook
description = Clustaar webhook framework
author = Aurélien
author-email = aurelien@clustaar.com
license = mit
url = https://github.com/Clustaar/clustaar.webhook
long-description = file: README.md
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# Add here dependencies of your project (semicolon-separated), e.g.
# install_requires = numpy; scipy
install_requires = 
    falcon~=1.4.1
    ujson~=1.35
    jmespath~=0.9.3
    clustaar.schemas~=0.17.0
    python-dateutil~=2.7.3
# Add here test requirements (semicolon-separated)
tests_require = pytest; pytest-cov

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install clustaar.webhook[PDF]` like:
# PDF = ReportLab; RXP

[test]
# py.test options when running `python setup.py test`
addopts = tests

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov clustaar.webhook --cov-report html --cov-report term-missing:skip-covered --no-cov-on-fail
    --verbose
    -s -rw

norecursedirs =
    dist
    build
    .tox

codestyle_exclude =
        setup.py ALL
        docs/* ALL
        tests/* ALL
        .eggs/* aLL

codestyle_max_line_length = 100
codestyle_ignore =
    E203
    E502
    W504
    W503

[aliases]
release = sdist bdist_wheel upload

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
ignore = E203, E266, E501, W503, W504, F403, F401, E502
max-line-length = 100
max-complexity = 18
select = B,C,E,F,W,T4,B9

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.0.1
package = webhook
extensions =
    namespace
namespace = clustaar
